[project]
name = "langchain-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.18",
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
]
